--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="work.js"></script> 
 </head>
 <body> 
-    <header>
-        <a href="index.html" class="logo"><i>PORTFOLIO</i></a>
+    <header class="header">
+        <a class="logo"><b>PORTFOLIO</b></a>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
@@ -24,7 +24,10 @@
         <img src="me.jpg" alt="my_pic">
         </div>
         <div class="Home-content">
-            <h1>Hi, it's <span>Akhilesh Dutt</span></h1>
+            <h1>Hi, it's</h1>
+            <br>
+            <span><b style="font-style:inherit;">Akhilesh Dutt</b></span>
+            <br>
             <h3 class="typing-text">I'm a <span></span>
             </h3>
             <p style="font-size: 20px; font-family: calibri;">I am a B.Tech Cybersecurity student at Lovely Professional University with a strong foundation in ethical hacking, cryptography, and network security. Alongside my cybersecurity focus, I am expanding my expertise into Web Development and Data Science to adopt a multidisciplinary approach. 
@@ -36,10 +39,10 @@
                 <a href="https://github.com/akhileshdutt" target="_blank"><i class="fab fa-github" style="font-size: 36px;"></i></a>
                 &nbsp
                 &nbsp
-                <a href="https://www.instagram.com/akhilesh_dutt_/" target="_blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> 
+                <a href="https://www.linkedin.com/in/akhilesh-dutt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
                 &nbsp
                 &nbsp 
-                <a href="https://www.linkedin.com/in/akhilesh-dutt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
+                <a href="https://www.instagram.com/akhilesh_dutt_/" target="_blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> 
                 </div>
                 <br>
                 <br>
