--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="Home-content">
             <h1>Hi, it's</h1>
             <br>
-            <span><b style="font-style:inherit;">Akhilesh Dutt</b></span>
+            <span><b style="font-style:inherit;">Akhilesh Datt</b></span>
             <br>
             <h3 class="typing-text">I'm a <span></span>
             </h3>
