--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         background-color: #fff;
         padding: 80px 0;
         text-align: center;
-        background-image: url('38_modern_web_design.png');
+        background-image: url('pc.png');
         background-size:cover;
         background-position: 0rem;
     }
@@ -147,6 +147,7 @@
 </head>
 <body>
     <section class="hero">
+        <!-- <img src="pc.png"> -->
         <div class="container">
             <div class="hero-content">
                 <h1>My Work</h1>
