--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
   <body>
     <section class="about-us">
       <div class="about">
-        <a href="index.html"><img src="main.jpg" class="pic" /></a>
+        <a href="index.html"><img src="dev.avif" class="pic" /></a>
         <div class="text">
           <h2>About me</h2>
           <h5>Developer & <span> Cyber Security Analyst</span></h5>
