--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
-            <a href="#" >Resume</a>
+            <a href="Resume.html" >Resume</a>
             <a href="projects.html" >Projects</a>
             <a href="contact.html" >Contact</a>
         </nav>
