--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.linkedin.com/in/akhilesh-dutt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
                 &nbsp
                 &nbsp 
-                <a href="https://www.linkedin.com/in/akhilesh-datt/" target="_blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> 
+                <a href="https://www.instagram.com/akhilesh_dutt_/" target="_blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> 
                 </div>
                 <br>
                 <br>
