--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://github.com/akhileshdutt" target="_blank"><i class="fab fa-github" style="font-size: 36px;"></i></a>
                 &nbsp
                 &nbsp
-                <a href="https://www.linkedin.com/in/akhilesh-dutt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
+                <a href="https://www.linkedin.com/in/akhilesh-datt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
                 &nbsp
                 &nbsp 
                 <a href="https://www.instagram.com/akhilesh_dutt_/" target="_blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> 
