--- a/Resume.html
+++ b/Resume.html
@@ -1,62 +1,27 @@
 <!DOCTYPE html>
-<html>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PDF Full Page</title>
+  <style>
+    /* Ensure the body and html take up the full viewport height */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+    }
 
-.bgimg {
-  background-image: url('res.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
-}
-
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
-
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-</style>
+    /* Make the iframe fill the entire viewport */
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
+</head>
 <body>
-
-<div class="bgimg">
-  <div class="topleft">
-    <!-- <p>Logo</p> -->
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-    <!-- <p>35 days left</p> -->
-  </div>
-  <div class="bottomleft">
-    <!-- <p>Some text</p> -->
-  </div>
-</div>
-
+  <iframe src="Akhilesh Datt.pdf" width="100%" height="100%"></iframe>
 </body>
 </html>
