--- a/Resume.html
+++ b/Resume.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <iframe src="Akhilesh Datt.pdf" width="100%" height="100%"></iframe>
+  <iframe src="AkhileshGeneralCV.pdf" width="100%" height="100%"></iframe>
 </body>
 </html>
