--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <br>
             <h3 class="typing-text">I'm a <span></span>
             </h3>
-            <p style="font-size: 20px; font-family: calibri;">I am a B.Tech Cybersecurity student at Lovely Professional University with a strong foundation in ethical hacking, cryptography, and network security. Alongside my cybersecurity focus, I am expanding my expertise into Web Development and Data Science to adopt a multidisciplinary approach. 
-                Skilled in HTML, CSS, JavaScript, C++, C, Java, and Python, I can develop secure web applications and analyze data trends. My goal is to become a cybersecurity professional who effectively anticipates and mitigates digital risks. I am currently seeking opportunities to apply my skills in real-world settings and contribute to impactful projects.</p>
+            <p style="font-size: 20px; font-family: calibri;">I am a B.Tech student at Lovely Professional University, majoring in Cybersecurity, with a strong passion for Web Development. While my academic background has given me a solid understanding of cybersecurity principles, my primary focus is on building modern, responsive, and secure web applications. Skilled in HTML, CSS, JavaScript, C++, C, Java, and Python, I aim to develop software solutions that are not only innovative but also robust and user-centric. With knowledge spanning both cybersecurity and development, I bring a unique perspective to creating safe and efficient digital experiences. I am actively working towards becoming a software developer and am excited to contribute to impactful projects.</p>
             <!-- <div class="social-icons"> -->
                 <br>
                 <br>
