--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,7 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjyEkzy1NDzRCiuaUCJQ12H86ar-y5zdmAug&s" alt="Service 2">
                     <h3>Sundown Studio</h3>
                     <p>Sundown is a multi-disciplinary studio forced on creating unique, end-to-end experience and environment</p>
+                    <a href="https://github.com/akhileshdutt/Sundown" target="_blank"><i class="fab fa-github" style="font-size: 36px;"></i></a>
                 </div>
                 <div class="service">
                     <img src="rps.jpg" alt="Service 3">
