--- a/projects.html
+++ b/projects.html
@@ -175,9 +175,9 @@
                     <a href="https://sundown-akhileshdutts-projects.vercel.app/" target="_blank" class="btn"><i class="fas fa-external-link-alt"></i></a>
                 </div>
                 <div class="service">
-                    <img src="port.jpg" alt="Service 3">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlEhs4ueB3zBdg6pCrj7tmcqFZ3dqtUDhrpL7O7Rx-ANVynSfBbGQtxTnS7_BTIIp2KqQ&usqp=CAU" alt="Service 3">
                     <h3>Portfolio Website</h3>
-                    <p>Welcome to my portfolio, where I showcase my projects and skills in web development and cybersecurity.</p><br>
+                    <p>Welcome to my portfolio, where I showcase my projects and skills in web development and cybersecurity.</p><br><br><br><br>
                     <a href="https://github.com/akhileshdutt/Portfolio_" target="_blank" class="btn"><i class="fab fa-github"></i></a>
                     <a href="https://portfolio-omega-sepia-21.vercel.app/" target="_blank" class="btn"><i class="fas fa-external-link-alt"></i></a>
                     
