--- a/projects.html
+++ b/projects.html
@@ -179,7 +179,7 @@
                     <h3>Portfolio Website</h3>
                     <p>Welcome to my portfolio, where I showcase my projects and skills in web development and cybersecurity.</p><br><br><br><br>
                     <a href="https://github.com/akhileshdutt/Portfolio_" target="_blank" class="btn"><i class="fab fa-github"></i></a>
-                    <a href="https://portfolio-omega-sepia-21.vercel.app/" target="_blank" class="btn"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://portfolio-gray-mu-66.vercel.app/" target="_blank" class="btn"><i class="fas fa-external-link-alt"></i></a>
                     
                 </div>
             </div>
