--- a/projects.html
+++ b/projects.html
@@ -77,13 +77,16 @@
         color: #fff;
         padding: 15px 30px;
         border: none;
-        border-radius: 5px;
+        border-radius: 50%;
         cursor: pointer;
         transition: background-color 0.3s ease;
     }
     
     .btn:hover {
         background-color: #b30000;
+        border-radius: 40%;
+        transition: border-radius 0.2s ease;
+
     }
     
     .services {
