--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!-- Responsive Contact Page with Dark Mode and Form Validation (vanilla JS).
 
 *Designed & built for desktop and tablets with viewport width >= 720px and in landscape orientation.  -->
+<link rel="shortcut icon" href="me_logo.png" type="image/x-icon">
 <style>:root {
     --primary-color: #010712;
     --secondary-color: #818386;
