--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <img src="me.jpg" alt="my_pic">
         </div>
         <div class="Home-content">
-            <h1>Hi, it's</h1>
+            <h1 class="typing-text"><span></span>, it's </h1>
             <br>
             <span><b style="font-style:inherit;">Akhilesh Datt</b></span>
             <br>
-            <h3 class="typing-text">I'm a <span></span>
+            <!-- <h3 class="typing-text">I'm a <span></span> -->
             </h3>
             <p style="font-size: 20px; font-family: calibri;">I am a B.Tech student at Lovely Professional University, majoring in Cybersecurity, with a strong passion for Web Development. While my academic background has given me a solid understanding of cybersecurity principles, my primary focus is on building modern, responsive, and secure web applications. Skilled in HTML, CSS, JavaScript, C++, C, Java, and Python, I aim to develop software solutions that are not only innovative but also robust and user-centric. With knowledge spanning both cybersecurity and development, I bring a unique perspective to creating safe and efficient digital experiences. I am actively working towards becoming a software developer and am excited to contribute to impactful projects.</p>
             <!-- <div class="social-icons"> -->
