--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <!-- <div class="social-icons"> -->
                 <br>
                 <br>
-                 <div class="social-icon">
-                <a href="https://github.com/akhileshdutt" target="_blank"><i class="fab fa-github" style="font-size: 36px;"></i></a>
+                 <div class="social-icon" id="floating-icon">
+                <a href="https://github.com/akhileshdutt" target="_blank"><i class="fab fa-github" style="font-size: 36px;" ></i></a>
                 &nbsp
                 &nbsp
                 <a href="https://www.linkedin.com/in/akhilesh-datt/" target="_blank"><i class="fab fa-linkedin" style="font-size: 36px;"></i></a> 
@@ -47,7 +47,7 @@
                 </div>
                 <br>
                 <br>
-                <a href="contact.html" class="btn">Hire me</a>
+                <a href="contact.html" class="btn" >Hire me</a>
             </div>
         </div>
     </section>
