--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="me.jpg" alt="my_pic">
         </div>
         <div class="Home-content">
-            <h1 class="typing-text"><span></span>, it's <br><br><span1 class="wave">👋</span1>
+            <h1 class="typing-text"><span></span>, it's <span1 class="wave">👋</span1>
             </h1>
             <br>
             <span><b style="font-style:inherit;">Akhilesh Datt</b></span>
